Avoid adding too much whitespace.

--- a/public/stylesheets/kernel-blue.css
+++ b/public/stylesheets/kernel-blue.css
@@ -19,7 +19,6 @@ pre {
 	margin: 0;
 	margin-right: 10%;
 	margin-top: 1.5em;
-	margin-bottom: 1.5em;
 }
 
 /*.programlisting {
